<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/sky_blue"
    android:paddingStart="20dp"
    android:paddingEnd="20dp"
    tools:context=".activities.EditProfileActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="25dp"
        android:paddingBottom="40dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="18sp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:minWidth="100dp"
                android:padding="4dp"
                android:text="@string/name"
                android:textSize="16dp"/>
            
            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:minHeight="50dp"
                android:layout_weight="1"
                android:padding="4dp"
                android:background="@drawable/edit_text_bg"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:minWidth="100dp"
                android:padding="4dp"
                android:text="@string/description"
                android:textSize="16dp"/>

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:minHeight="120dp"
                android:padding="4dp"
                android:layout_weight="1"
                android:background="@drawable/edit_text_bg"/>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profile_picture"
            android:padding="4dp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginTop="20dp"
            android:textSize="16sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:minHeight="160dp"
            android:background="@drawable/upload_bg"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/upload_icon"
                app:tint="@color/dark_blue" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:layout_marginTop="6dp"
                android:textColor="@color/black"
                android:text="Recommended resolution(4:3)"
                android:textAlignment="center"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="10dp"
                android:textColor="@color/black"
                android:text="Not more than 2MB"
                android:textAlignment="center"/>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Social Media Links"
            android:padding="4dp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginTop="20dp"
            android:textSize="16sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="20dp"
                android:minWidth="140dp"
                android:padding="4dp"
                android:background="@drawable/edit_text_bg"/>

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:hint="@string/add_link"
                android:layout_weight="1"
                android:background="@drawable/edit_text_bg"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.3dp"
            android:layout_marginTop="12dp"
            android:background="@color/black"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginEnd="20dp"
                android:minWidth="140dp"
                android:padding="4dp"
                android:src="@drawable/add"
                app:tint="@color/dark_blue" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:textColor="@color/dark_blue"
                android:text="Add Another Link"/>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Projects"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            android:textColor="@color/black"
            android:textSize="18sp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:minWidth="100dp"
                android:padding="4dp"
                android:text="Name"
                android:textSize="16dp"/>

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:minHeight="50dp"
                android:hint="EasyLinks"
                android:layout_weight="1"
                android:padding="4dp"
                android:background="@drawable/edit_text_bg"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:minWidth="100dp"
                android:padding="4dp"
                android:text="Description"
                android:textSize="16dp"/>

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:minHeight="120dp"
                android:hint="project description..."
                android:padding="4dp"
                android:layout_weight="1"
                android:background="@drawable/edit_text_bg"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.3dp"
            android:layout_marginTop="12dp"
            android:background="@color/black"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginEnd="20dp"
                android:minWidth="140dp"
                android:padding="4dp"
                android:src="@drawable/add"
                app:tint="@color/dark_blue" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:textColor="@color/dark_blue"
                android:text="Add Another Project"/>

        </LinearLayout>

        <Button
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/dark_blue"
            android:layout_marginTop="25dp"
            android:layout_gravity="center"
            android:text="Submit"/>
    </LinearLayout>

</androidx.core.widget.NestedScrollView>